--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -48,4 +48,4 @@ jobs:
 
       - name: Run ghp-import
         run: |
-          ghp-import -n -p -f docs/_build/html
+          ghp-import -n -p -f docs/build/html
