--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,24 +1,15 @@
 name: Build-sphinx-docs
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [docs]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
@@ -39,13 +30,17 @@ jobs:
           pip install sphinx-autoapi
           pip install ghp-import
           pip install maturin
+
       - name: Build Rust extension
         run: |
           maturin build --release
+
       - name: Build HTML
         run: |
           sphinx-build -b html docs/source docs/build/html
 
-      - name: Run ghp-import
-        run: |
-          ghp-import -n -p -f docs/build/html
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.GITHUB_TOKEN  }}
+          publish_dir: docs/build/html
